arkts_static_test/03_Types/ets_cases/3.17_Tuple_Types/compile-fail/TYP_03_17_008_FAIL_LENGTH_MISMATCH.ets
/**
 * @id TYP_03_17_008_FAIL_LENGTH_MISMATCH
 * @expect compile-fail
 * @section 3.17
 * @design 验证元组长度不匹配
 * @note 反向用例：验证该场景应产生编译时错误
 */
let tuple: [number, string] = [1, "hello", true]
